# routes/cartItem.js
@@ -1,0 +1,10 @@
+const express = require('express')
+const router = express.Router()
+const ctrl_cartItem = require('../controllers/controllers_cart_item')
+const { isAuth } = require('../statusHandle/auth')
+
+router.get('/', isAuth, ctrl_cartItem.getCartItems)
+
+router.post('/', isAuth, ctrl_cartItem.addToCart)
+
+module.exports = router
